<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="coffee_logo">Coffee Logo</string>
    <string name="name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create New Account</string>
    <string name="donot_have_acc">Don\'t have an account?</string>
    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="price">Price</string>
    <string name="Conccurence">EGP</string>
    <string name="size">Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="total">Total</string>
    <string name="desc">Description:</string>
    <string name="remove">Remove</string>
    <string name="image">Image</string>
    <string name="category">Category</string>
    <string name="product">Product Name</string>
</resources>