<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/single_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        tools:context=".presentation.ui.single_product">

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/cafe"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_coffee_desc" />

        <TextView
            android:id="@+id/tv_coffee_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:paddingLeft="15dp"
            android:text="@string/desc"
            android:textColor="@color/cafe"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size" />

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="411dp"
            android:layout_height="194dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/coffee_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_coffee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:paddingLeft="15dp"
            android:textColor="@color/cafe"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_product" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="15dp"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_coffee_name" />

        <TextView
            android:id="@+id/egp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/Conccurence"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tv_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_coffee_name" />

        <TextView
            android:id="@+id/Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="36dp"
            android:text="@string/one"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/tv_price"
            app:layout_constraintTop_toBottomOf="@+id/iv_product" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="52dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/plus"
            app:layout_constraintStart_toEndOf="@+id/Quantity"
            app:layout_constraintTop_toBottomOf="@+id/iv_product" />

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="52dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:text="@string/minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_product" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingLeft="15dp"
            android:text="@string/size"
            android:textColor="@color/cafe"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="62dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/tv_size"
            app:layout_constraintTop_toBottomOf="@+id/Quantity">

            <RadioButton
                android:id="@+id/small"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/small" />

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/large"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/large" />
        </RadioGroup>

        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>